Returned user display name from server instead of just user id

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,13 @@
                 <h3>Turn Tracker</h3>
                 <div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default" ng-click="test.takeTurn(test.myId)">Take Turn</button>
+                        <button type="button" class="btn btn-default" ng-click="test.takeTurn(test.me.id)">Take Turn for {{test.me.name}}</button>
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                             <span class="sr-only">Toggle Dropdown</span>
                         </button>
-                        <span class="my-name" ng-cloak>{{test.userMap[test.myId]}}</span>
                         <ul class="dropdown-menu" ng-cloak>
-                            <li ng-repeat="user in test.users" ng-class="test.myId == user.id ? 'active' : ''" ng-click="test.myId = user.id"><a href="#">{{user.name}}</a></li>
+                            <li ng-repeat="user in test.users" ng-class="test.me.id == user.id ? 'active' : ''" ng-click="test.me = user"><a href="#">{{user.name}}</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,7 +44,7 @@
             <div class="list-column col-lg-9 col-md-8 col-sm-7 col-xs-12">
                 <table class="table table-condensed table-hover">
                     <tbody ng-cloak>
-                        <tr ng-repeat="item in test.list" ng-class="test.hoverId == item.id ? 'highlight' : ''">
+                        <tr ng-repeat="item in test.turns" ng-class="test.hoverId == item.id ? 'highlight' : ''">
                             <td>{{item.date}}</td>
                             <td>{{item.name}}</td>
                         </tr>
