Add headers and fix alignment of dropdown list

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,13 @@
         </div>
         <div class="row">
             <div class="control-column col-lg-3 col-md-4 col-sm-5 col-xs-12">
-                <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
-                <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
                 <h3>Turn Tracker</h3>
+                <div class="test-buttons">
+                    <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
+                    <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
+                </div>
                 <div>
-                    <div class="dropdown" ng-cloak>
+                    <div class="btn-group top" ng-cloak>
                         <button class="btn btn-default dropdown-toggle" type="button" id="taskDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{test.task.name}} <span class="caret"></span></button>
                         <ul class="dropdown-menu" aria-labelledby="taskDropdown">
                             <li ng-repeat="task in test.tasks" ng-class="task.id == test.task.id ? 'active' : ''" ng-click="test.getTurnsAndStatus(task.id)"><a href="#">{{task.name}}</a></li>
@@ -62,10 +64,19 @@
             </div>
             <div class="list-column col-lg-9 col-md-8 col-sm-7 col-xs-12">
                 <table class="table table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>User</th>
+                            <th>ID</th>
+                            <th></th>
+                        </tr>
+                    </thead>
                     <tbody ng-cloak>
                         <tr ng-repeat="item in test.turns" ng-class="test.hoverId == item.userid ? 'active' : ''">
                             <td>{{item.date}}</td>
                             <td>{{item.name}}</td>
+                            <td>{{item.turnid}}</td>
                             <td><button type="button" class="close" ng-click="test.deleteTurn(item)"><span aria-hidden="true">&times;</span></button></td>
                         </tr>
                     </tbody>
