--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
             <div class="control-column col-lg-3 col-md-4 col-sm-5 col-xs-12">
-                <h3>Turn Tracker</h3>
+                <h2 class="title">Turn Tracker</h2>
                 <div class="test-buttons">
                     <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
                     <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
