--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
                     <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
                     <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
                     <button type="button" class="btn btn-info" ng-click="test.getSubscriptions()">Subs</button>
+                    <button type="button" class="btn btn-info" ng-click="test.getUser('user11')">User</button>
                 </div>
                 <div>
                     <div class="btn-group" ng-cloak>
