--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,12 @@
         <div class="row">
             <div class="control-column col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="title">Turn Tracker</h2>
+                <div>
+                    <span>Viewing as </span>
+                    <select ng-options="user.id as user.name for user in test.allUsers" ng-model="test.viewingUserId">
+                        <option value="">-- user --</option>
+                    </select>
+                </div>
                 <div class="test-buttons">
                     <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
                     <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
