--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,15 @@
                 <ul class="list-group" ng-cloak>
                     <li class="list-group-item" ng-repeat="user in test.users" ng-class="{'list-group-item-info': user.diff==test.worst, active: $first}" ng-mouseenter="test.hoverId = user.id" ng-mouseleave="test.hoverId = 0">{{user.name}}<span class="badge">{{user.diff}}</span><span class="pull-right"><span ng-if="user.mobile" class="glyphicon glyphicon-phone mobile-status"></span></span></li>
                 </ul>
+                <div ng-controller="CreateUserController as user" ng-init="user.setErrorHandlers(test.clearError, test.handleApiError);">
+                    <form class="form-inline" novalidate>
+                        <fieldset ng-disabled="user.busy">
+                            <input type="text" class="form-control" ng-model="user.username" placeholder="username">
+                            <input type="text" class="form-control" ng-model="user.displayname" placeholder="displayname">
+                            <button type="button" class="btn btn-default" ng-click="user.save()">Create</button>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
             <div class="list-column col-lg-7 col-md-6 col-sm-6 col-xs-12">
                 <table class="table table-condensed table-hover">
