Improved web page appearance and disallowed future turns to be taken

--- a/public/index.html
+++ b/public/index.html
@@ -33,17 +33,11 @@
         <div class="row">
             <div class="control-column col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="title">Turn Tracker</h2>
-                <div>
+                <div class="viewing-as">
                     <span>Viewing as </span>
                     <select ng-options="user.id as user.name for user in test.allUsers" ng-model="test.viewingUserId">
                         <option value="">-- user --</option>
                     </select>
-                </div>
-                <div class="test-buttons">
-                    <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
-                    <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
-                    <button type="button" class="btn btn-info" ng-click="test.getSubscriptions()">Subs</button>
-                    <button type="button" class="btn btn-info" ng-click="test.getUser('user11')">User</button>
                 </div>
                 <div>
                     <div class="btn-group" ng-cloak>
@@ -85,32 +79,66 @@
                 <ul class="list-group" ng-cloak>
                     <li class="list-group-item" ng-repeat="user in test.users" ng-class="{'list-group-item-info': user.diff==test.worst, active: $first}" ng-mouseenter="test.hoverId = user.id" ng-mouseleave="test.hoverId = 0">{{user.name}}<span class="badge">{{user.diff}}</span><span class="pull-right"><span ng-if="user.mobile" class="glyphicon glyphicon-phone mobile-status"></span></span></li>
                 </ul>
-                <div ng-controller="CreateUserController as user" ng-init="user.setErrorHandlers(test.clearError, test.handleApiError);">
-                    <form class="form-inline" novalidate>
-                        <fieldset ng-disabled="user.busy">
-                            <input type="text" class="form-control" ng-model="user.username" placeholder="username">
-                            <input type="text" class="form-control" ng-model="user.displayname" placeholder="displayname">
-                            <button type="button" class="btn btn-primary" ng-click="user.save()">Create</button>
-                        </fieldset>
-                    </form>
+                <div class="panel panel-primary" ng-controller="CreateUserController as user" ng-init="user.setErrorHandlers(test.clearError, test.handleApiError);">
+                    <div class="panel-heading">Create User</div>
+                    <div class="panel-body">
+                        <form novalidate>
+                            <fieldset ng-disabled="user.busy">
+                                <div class="form-group">
+                                    <label for="NewUserUsername">Username</label>
+                                    <input id="NewUserUsername" type="text" class="form-control" ng-model="user.username" placeholder="username">
+                                </div>
+                                <div class="form-group">
+                                    <label for="NewUserDisplayName">Display Name</label>
+                                    <input id="NewUserDisplayName" type="text" class="form-control" ng-model="user.displayname" placeholder="displayname">
+                                </div>
+                                <button type="button" class="btn btn-primary" ng-click="user.save()">Create User</button>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
-                <div ng-if="test.allUsers.length > 0" ng-controller="CreateTaskController as task" ng-init="task.setErrorHandlers(test.clearError, test.handleApiError); task.setUsers(test.me, test.allUsers);">
-                    <form class="form-inline" novalidate>
-                        <fieldset ng-disabled="user.busy">
-                            <input type="text" class="form-control" ng-model="task.name" placeholder="name">
-                            <input type="number" min="0" step="1" class="form-control" ng-model="task.hours" placeholder="0">
-                            <select multiple ng-attr-size="{{task.users.length}}" ng-options="user.id as user.name for user in task.users" ng-model="task.selectedUsers">
-                            </select>
-                            <button type="button" class="btn btn-primary" ng-click="task.save()">Create</button>
-                        </fieldset>
-                    </form>
+                <div class="panel panel-primary" ng-if="test.allUsers.length > 0" ng-controller="CreateTaskController as task" ng-init="task.setErrorHandlers(test.clearError, test.handleApiError); task.setUsers(test.me, test.allUsers);">
+                    <div class="panel-heading">Create Task</div>
+                    <div class="panel-body">
+                        <form novalidate>
+                            <fieldset ng-disabled="user.busy">
+                                <div class="form-group">
+                                    <label for="NewTaskName">Name</label>
+                                    <input id="NewTaskName" type="text" class="form-control" ng-model="task.name" placeholder="name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="NewTaskHours">Periodic Hours</label>
+                                    <input id="NewTaskHours" type="number" min="0" step="1" class="form-control" ng-model="task.hours" placeholder="0">
+                                    <span>Set to 0 for intermediate</span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="NewTaskUsersSelect">Users</label>
+                                    <select id="NewTaskUsersSelect" class="form-control" multiple ng-attr-size="{{task.users.length}}" ng-options="user.id as user.name for user in task.users" ng-model="task.selectedUsers">
+                                    </select>
+                                    <p><label>Selected:&nbsp;</label><span ng-repeat="id in task.selectedUsers">{{task.userMap[id].name}}, </span>{{task.me.name}}</p>
+                                </div>
+                                <button type="button" class="btn btn-primary" ng-click="task.save()">Create Task</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>     
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Debug</div>
+                    <div class="panel-body">
+                        <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
+                        <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
+                        <button type="button" class="btn btn-info" ng-click="test.getSubscriptions()">Subs</button>
+                        <button type="button" class="btn btn-info" ng-click="test.getUser('user11')">User</button>
+                    </div>
                 </div>
             </div>
             <div class="list-column col-lg-7 col-md-6 col-sm-6 col-xs-12">
                 <table class="table table-condensed table-hover">
                     <thead>
                         <tr>
-                            <th>Date</th>
+                            <th>Taken</th>
+                            <th></th>
+                            <th>Added</th>
                             <th>User</th>
                             <th>ID</th>
                             <th></th>
@@ -119,6 +147,8 @@
                     <tbody ng-cloak>
                         <tr ng-repeat="item in test.turns" ng-class="test.hoverId == item.userid ? 'active' : ''">
                             <td>{{item.date}}</td>
+                            <td><span ng-if="item.diff" class="glyphicon glyphicon-alert"></span></td>
+                            <td>{{item.inserted}}</td>
                             <td>{{item.name}}</td>
                             <td>{{item.turnid}}</td>
                             <td><button type="button" class="close" ng-click="test.deleteTurn(item)"><span aria-hidden="true">&times;</span></button></td>
